<resources>
    <string name="app_name">Tennis Score Keeper</string>
    <string name="player1_name">Enter Player 1 Name</string>
    <string name="player2_name">Enter Player 2 Name</string>
    <string name="start_game">Start Game</string>
    <string name="game_setup">Game Setup</string>
    <string name="undo">Undo</string>
    <string name="remake_game">Remake Game</string>
    <string name="reset_game">Reset Game</string>
    <string name="forfeit">Forfeit</string>
    <string name="point_win">Point Win</string>
    <string name="fault">Fault</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="clear_score">0</string>
    <string name="set1">Set1</string>
    <string name="set2">Set2</string>
    <string name="set3">Set3</string>
    <string name="set4">Set4</string>
    <string name="set5">Set5</string>
    <string name="pts">Pts</string>
    <string name="players">Players</string>
    <string name="match_format">Match Format</string>
</resources>
