<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a84a78e6"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context="com.example.jeremy.tennisscorekeeperapp.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TableLayout
                android:id="@+id/ScoreBoard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal"
                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        android:id="@+id/playersHeader"
                        style="@style/TableTheme"
                        android:text="@string/players" />

                    <TextView
                        android:id="@+id/set1header"
                        style="@style/TableTheme"
                        android:text="@string/set1" />

                    <TextView
                        android:id="@+id/set2header"
                        style="@style/TableTheme"
                        android:text="@string/set2" />

                    <TextView
                        android:id="@+id/set3header"
                        style="@style/TableTheme"
                        android:text="@string/set3" />

                    <TextView
                        android:id="@+id/set4header"
                        style="@style/TableTheme"
                        android:text="@string/set4" />

                    <TextView
                        android:id="@+id/set5header"
                        style="@style/TableTheme"
                        android:text="@string/set5" />

                    <TextView
                        android:id="@+id/ptsHeader"
                        style="@style/TableTheme"
                        android:text="@string/pts" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/p1"
                        style="@style/TableTheme"
                        android:text="@string/player_1"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/p1Set1Points"
                        style="@style/SetPtsTableTheme" />

                    <TextView
                        android:id="@+id/p1Set2Points"
                        style="@style/SetPtsTableTheme" />

                    <TextView
                        android:id="@+id/p1Set3Points"
                        style="@style/SetPtsTableTheme" />

                    <TextView
                        android:id="@+id/p1Set4Points"
                        style="@style/SetPtsTableTheme" />

                    <TextView
                        android:id="@+id/p1Set5Points"
                        style="@style/SetPtsTableTheme" />

                    <TextView
                        android:id="@+id/p1Points"
                        style="@style/PtsTableTheme" />

                    <TextView
                        android:id="@+id/p1Fault"
                        style="@style/FaultTableTheme" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/p2"
                        style="@style/TableTheme"
                        android:text="@string/player_2"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/p2Set1Points"
                        style="@style/SetPtsTableTheme" />

                    <TextView
                        android:id="@+id/p2Set2Points"
                        style="@style/SetPtsTableTheme" />

                    <TextView
                        android:id="@+id/p2Set3Points"
                        style="@style/SetPtsTableTheme" />

                    <TextView
                        android:id="@+id/p2Set4Points"
                        style="@style/SetPtsTableTheme" />

                    <TextView
                        android:id="@+id/p2Set5Points"
                        style="@style/SetPtsTableTheme" />

                    <TextView
                        android:id="@+id/p2Points"
                        style="@style/PtsTableTheme" />

                    <TextView
                        android:id="@+id/p2Fault"
                        style="@style/FaultTableTheme" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/player1_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/player1_name"
                    style="@style/PlayerNameTheme"
                    android:text="@string/player_1" />

                <TextView
                    android:id="@+id/player1_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/white_background"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/clear_score"
                    android:textColor="@color/colorPrimary"
                    android:textSize="60sp" />

                <Button
                    android:id="@+id/player1_fault"
                    style="@style/ButtonTheme"
                    android:background="#dae75d2b"
                    android:text="@string/fault" />

                <Button
                    android:id="@+id/player1_pointWin"
                    style="@style/ButtonTheme"
                    android:background="#eb1a65cf"
                    android:text="@string/point_win" />


                <Button
                    android:id="@+id/player1_forfeit"
                    style="@style/ButtonTheme"
                    android:background="#e9cf2929"
                    android:text="@string/forfeit" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white_background"></View>

            <LinearLayout
                android:id="@+id/player2_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/player2_name"
                    style="@style/PlayerNameTheme"
                    android:text="@string/player_2" />

                <TextView
                    android:id="@+id/player2_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/white_background"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:text="@string/clear_score"
                    android:textColor="@color/colorPrimary"
                    android:textSize="60sp" />

                <Button
                    android:id="@+id/player2_fault"
                    style="@style/ButtonTheme"
                    android:background="#dae75d2b"
                    android:text="@string/fault" />

                <Button
                    android:id="@+id/player2_pointWin"
                    style="@style/ButtonTheme"
                    android:background="#eb1260cf"
                    android:text="@string/point_win" />


                <Button
                    android:id="@+id/player2_forfeit"
                    style="@style/ButtonTheme"
                    android:background="#e9cf2929"
                    android:text="@string/forfeit" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="45dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/undo_action"
                style="@style/SecondaryButtonTheme"
                android:layout_marginHorizontal="10dp"
                android:text="@string/undo" />

            <Button
                android:id="@+id/remake_game"
                style="@style/SecondaryButtonTheme"
                android:layout_marginHorizontal="10dp"
                android:text="@string/remake_game" />

            <Button
                android:id="@+id/reset_game"
                style="@style/SecondaryButtonTheme"
                android:layout_marginHorizontal="10dp"
                android:text="@string/reset_game" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
