<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context="com.example.jeremy.tennisscorekeeperapp.StartActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/game_setup"
                android:textColor="@color/black_grey"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="120dp"
                android:background="@color/colorPrimary"></View>

            <EditText
                android:id="@+id/player1name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/player1_name"
                android:inputType="textCapSentences"
                android:textColor="@color/black_grey"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/player2name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/player2_name"
                android:inputType="textCapSentences"
                android:textColor="@color/black_grey"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:fontFamily="sans-serif-medium"
                android:text="Match Format"
                android:textColor="@color/black_grey"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/gameLength_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="40dp"></Spinner>

            <Button
                style="@style/SecondaryButtonTheme"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="startBtnClick"
                android:text="@string/start_game" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>